--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,9 @@ aliyun.oss.bucket-name=ph-movies
 # 最大文件上传
 spring.servlet.multipart.maxFileSize=-1
 spring.servlet.multipart.maxRequestSize=-1
+
+
+spring.redis.host=123.56.255.126
+spring.redis.port=6379
+spring.redis.database=0
+
