测试了Redis接口幂等性

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,5 @@ spring.redis.host=123.56.255.126
 spring.redis.port=6379
 spring.redis.database=0
 
+# redis如果设密码的话一定要在这里设置一下
+spring.redis.password=091011
