--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,12 +6,12 @@ spring.profiles.active=dev
 
 # aliyun oss
 aliyun.oss.endpoint=oss-cn-beijing.aliyuncs.com
-aliyun.oss.access-key-id=LTAI4G2f2Ab4hKjJDnY2Yvqo
-aliyun.oss.access-key-secret=Y8kkRa2Q6lKEVnVOneg5UatI7DN4mX
-aliyun.oss.bucket-name=ph-movies
+aliyun.oss.access-key-id=
+aliyun.oss.access-key-secret=
+aliyun.oss.bucket-name=
 
 
-# ×î´óÎÄ¼şÉÏ´«
+# æœ€å¤§æ–‡ä»¶ä¸Šä¼ 
 spring.servlet.multipart.maxFileSize=-1
 spring.servlet.multipart.maxRequestSize=-1
 
@@ -20,5 +20,5 @@ spring.redis.host=123.56.255.126
 spring.redis.port=6379
 spring.redis.database=0
 
-# redisÈç¹ûÉèÃÜÂëµÄ»°Ò»¶¨ÒªÔÚÕâÀïÉèÖÃÒ»ÏÂ
+# rediså¦‚æœè®¾å¯†ç çš„è¯ä¸€å®šè¦åœ¨è¿™é‡Œè®¾ç½®ä¸€ä¸‹
 spring.redis.password=091011
